# nba-contract-value-predictor

./: Dockerfile  README.md  analysis.ipynb  contracts_eda.py  contracts_spider.py  docker-compose.yml  injuries_eda.py  injuries_spider.py  nba_dot_com_scraper.py  pyproject.toml  requirements.txt
