[tool.poetry]
name = "nba-contract-value-predictor"
version = "0.1.0"
description = "Package for contract value estimation for active NBA players"
authors = ["Chae Gordon"]
readme = "README.md"
packages = [{include = "nba_contract_value_predictor"}]

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^5.3.0"
requests = "^2.32.3"
pandas = "^2.2.2"
tqdm = "^4.66.5"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
selenium = "^4.25.0"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
